--- a/.gitignore
+++ b/.gitignore
@@ -100,3 +100,4 @@ shiny_bookmarks/
 rsconnect/
 genetic-algorithm-feature-selection/modules/__pycache__/clade.cpython-38.pyc
 genetic-algorithm-feature-selection/modules/__pycache__/clade.cpython-38.pyc
+genetic-algorithm-feature-selection/modules/__pycache__/clade.cpython-38.pyc
