--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,10 @@
-backcall==0.2.0
-cycler==0.10.0
-decorator==4.4.2
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-jedi==0.17.2
-joblib==0.16.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-kiwisolver==1.2.0
-matplotlib==3.3.0
-numpy==1.19.1
-pandas==1.1.0
-parso==0.7.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==7.2.0
-pkg-resources==0.0.0
-plotly==4.9.0
-prompt-toolkit==3.0.7
-ptyprocess==0.6.0
-Pygments==2.7.1
-pyodbc==4.0.30
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.1
-pyzmq==19.0.2
-retrying==1.3.3
-scikit-learn==0.23.2
-scipy==1.5.2
-seaborn==0.10.1
-six==1.15.0
-threadpoolctl==2.1.0
-tornado==6.0.4
-traitlets==5.0.4
-wcwidth==0.2.5
+ipykernel
+ipython
+matplotlib==3.3
+numpy==1.19
+pandas==1.1
+plotly==4.9
+scikit-learn==0.23
+scipy==1.5
+seaborn==0.10
+spyder-kernels
